fix alignment issues when sidebar is present

--- a/assets/main.css
+++ b/assets/main.css
@@ -217,6 +217,30 @@ a.button-seasondownloaddirect {
 	background: linear-gradient(131deg, rgba(11,217,45,1) 45%, rgba(170,170,170,1) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0bd92d",endColorstr="#aaaaaa",GradientType=1);
 }
+/*pagecontent-page-post | Post Default Style*/
+.page-post{
+	text-align:left;
+	padding-left:10%;
+	padding-right:10%;
+	text-indent: 30px;
+}
+.page-post-with-sidebar{
+	text-align:left;
+	padding-left:20%;
+	padding-right:20%;
+	text-indent: 30px;
+}
+.page-post-with-sidebar figcaption, .page-post figcaption {
+	text-align:center;
+}
+@media (min-width:800px) {
+	.page-post-with-sidebar{
+		text-align:left;
+		padding-left:10%;
+		padding-right:10%;
+		width:60%;
+	}
+}
 /*pagecontent-light-border | Border Default Style */
 div.border{
 	border-top: 2px solid gray;
